namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: allowed-ns
    environment: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: allowed-ns
    environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: allowed-ns
    environment: production
